When creating local copy of a desktop entry file, make sure all the relevant properties are copied from the original.

BUG: 286717
FIXED-IN: 4.10.1
REVIEW: 106771